I have implemented a grid structure in shop.html as well as fixing the alignment issue in index.html.

--- a/Tabs_N_Blanks/css/img-styling.css
+++ b/Tabs_N_Blanks/css/img-styling.css
@@ -24,7 +24,7 @@ ul.img-list li {
 	margin: 0 0.5em;
 	position: relative;
 	width: 250px;
-	margin-bottom: 2rem;
+	margin: 2em 0;
 }
 
 
