--- a/Tabs_N_Blanks/css/main.css
+++ b/Tabs_N_Blanks/css/main.css
@@ -32,6 +32,8 @@
     letter-spacing: 0.1em;
     color: #5E5E5E; /* was originally #454545 on style guide */
     text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
   h2 {
